完成前台商品分類選單功能

--- a/css/css.css
+++ b/css/css.css
@@ -101,9 +101,14 @@ input[type=text],input[type=password]
 {
 	display:none;
 }
+#left .s a{
+	background-color: green;
+	color:white;
+}
 div.ww:hover > div.s
 {
 	display:block;
+	
 }
 .sb button
 {
