--- a/css/css.css
+++ b/css/css.css
@@ -44,8 +44,9 @@ body
 	display:inline-block;
 	width:70%;
 	padding:2%;
-	min-height:550px;
+	height:550px;
 	border:#000 1px solid;
+	overflow:auto;
 }
 #bottom
 {
